[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "flatline-debugger"
version = "1.0b0"
description = "Python process supervisor and crash debugger with live heartbeat monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Trent Tompkins", email = "trenttompkins@gmail.com"},
]
requires-python = ">=3.10"
dependencies = []   # zero required — pure stdlib

[project.optional-dependencies]
app      = ["PySide6>=6.4.0"]
database = ["pymysql>=1.0.0"]
all      = ["PySide6>=6.4.0", "pymysql>=1.0.0"]

[project.scripts]
flatline = "flatline:main"

[project.urls]
Homepage  = "https://flatline.triodesktop.com/"
Source    = "https://github.com/tibberous/Flatline"
Tracker   = "https://github.com/tibberous/Flatline/issues"
